[package]
name = "archiverd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
camino = "1.1.6"
clap = { version = "4.4.8", features = ["derive"] }
ctrlc = { version = "3.4.1", features = ["termination"] }
flate2 = { version = "1.0.28", features = ["zlib-ng"] }
glob = "0.3.1"
human-size = "0.4.3"
notify = "6.1.1"
rayon = "1.8.0"
tar = "0.4.40"
